--- a/.github/workflows/main_apidieta.yml
+++ b/.github/workflows/main_apidieta.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
-          name: python-app
+          name: entrypoint-app
           path: |
             . 
             !venv/
@@ -51,7 +51,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: python-app
+          name: entrypoint-app
           path: .
           
       - name: 'Deploy to Azure Web App'
